# get-pwbrowser-sync

./: 8.0.0  README.md  package.json  packages.txt  pyproject.toml  pyrightconfig.json  run-pytest.sh
.github/workflows/: routine-tests.yml
get_pwbrowser_sync/: __init__.py  config.py  get_pwbrowser_sync.py
tests/: __init__.py  conftest.py  test_divisible.py  test_example.py  test_m_browser.py  test_pw_test.py  test_pwbrowser.py  test_pwbrowser.py-  test_version.py
